[gd_scene load_steps=15 format=3 uid="uid://c4hs18f7bfaew"]

[ext_resource type="Script" path="res://Scripts/CharacterScripts/NPC.gd" id="1_33mn1"]
[ext_resource type="Resource" uid="uid://bgrjpjih4rwxy" path="res://CustomResources/PlayerMeal.tres" id="2_b2qht"]
[ext_resource type="Resource" uid="uid://d0ojrka58d027" path="res://CustomResources/GameManager.tres" id="2_gyrkx"]
[ext_resource type="PackedScene" uid="uid://djyfyi0mu4m38" path="res://Nodes/Components/ai_movement.tscn" id="4_d7kkh"]
[ext_resource type="PackedScene" uid="uid://838dejx73cqo" path="res://Nodes/Components/interation_area.tscn" id="4_h15ne"]
[ext_resource type="Texture2D" uid="uid://u13ut8j8perl" path="res://Sprites/placeholder sprites/heart.png" id="4_ka6t1"]
[ext_resource type="Script" path="res://Scripts/ComponentScripts/progress_bar.gd" id="5_vddod"]
[ext_resource type="PackedScene" uid="uid://c88ge1qvc6a8w" path="res://Nodes/CharacterNodes/npc_skin.tscn" id="6_axvpr"]
[ext_resource type="Script" path="res://Scripts/CharacterScripts/npc_ai_movement.gd" id="6_txabj"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_msmvb"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
initial_velocity_max = 360.0
gravity = Vector3(0, 0, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_kgaf6"]
radius = 154.081

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1y8so"]
size = Vector2(66, 48)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xlboi"]
bg_color = Color(0, 1, 0, 0.588235)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1m6fg"]
radius = 8.5
height = 54.0

[node name="NPC" type="CharacterBody2D" groups=["customers"]]
collision_layer = 2
collision_mask = 4
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_33mn1")
game_manager = ExtResource("2_gyrkx")
player_resources = ExtResource("2_b2qht")

[node name="HeartParticles" type="GPUParticles2D" parent="."]
position = Vector2(2, -298)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_msmvb")
texture = ExtResource("4_ka6t1")

[node name="NPCSkin" parent="." instance=ExtResource("6_axvpr")]
position = Vector2(0, -178)

[node name="InteractionArea" parent="." instance=ExtResource("4_h15ne")]
position = Vector2(1, -173)
action_name = "give meal"

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(0, 120)
shape = SubResource("CircleShape2D_kgaf6")

[node name="LeaveDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeaveDetector"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_1y8so")
debug_color = Color(0.937255, 0.219608, 0.317647, 0.419608)

[node name="Patience" type="ProgressBar" parent="."]
offset_left = -94.0
offset_top = -309.0
offset_right = 96.0
offset_bottom = -282.0
theme_override_styles/fill = SubResource("StyleBoxFlat_xlboi")
show_percentage = false
script = ExtResource("5_vddod")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1m6fg")

[node name="AiMovement" parent="." instance=ExtResource("4_d7kkh")]
position = Vector2(0, -8)
script = ExtResource("6_txabj")
table_manager = null
npc_speed = 150

[connection signal="approaching" from="." to="NPCSkin" method="_on_approaching"]
[connection signal="eating" from="." to="NPCSkin" method="_on_eating"]
[connection signal="interacting_with_cat" from="." to="NPCSkin" method="_on_interacting_with_cat"]
[connection signal="leaving" from="." to="NPCSkin" method="_on_leaving"]
[connection signal="ordering" from="." to="NPCSkin" method="_on_ordering"]
[connection signal="ready_for_cat" from="." to="NPCSkin" method="_on_ready_for_cat"]
[connection signal="waiting" from="." to="NPCSkin" method="_on_idle"]
[connection signal="area_entered" from="LeaveDetector" to="." method="_on_leave_detector_area_entered"]
